--- a/src/style.css
+++ b/src/style.css
@@ -79,7 +79,13 @@ main {
   box-shadow: 0em 0em 0.5em var(--shadow);
   flex-wrap: wrap;
   padding: 1em;
-  max-width: 400px;
+}
+
+#controls {
+  background-color: var(--main);
+  border-radius: 0.25em;
+  flex-wrap: wrap;
+  padding: 1em;
 }
 
 svg {
