--- a/src/style.css
+++ b/src/style.css
@@ -79,6 +79,7 @@ main {
   box-shadow: 0em 0em 0.5em var(--shadow);
   flex-wrap: wrap;
   padding: 1em;
+  min-width: 600px;
 }
 
 #controls {
@@ -123,6 +124,12 @@ svg rect {
 .right {
   font-size: 1em;
   float: right;
+}
+
+.tip {
+  padding-top: 1em;
+  color: var(--text);
+  font-style: italic;
 }
 
 #gameOver {
